# Arena3Dweb

./: .gitignore  CLAUDE.md  MIGRATION.md  PLAN.md  SPEC.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts
